--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,11 @@
   "extends": "@kevinoid/eslint-config/node.js",
 
   "rules": {
+    // Match Node.js runtime rules to minimize changes to copied code.
+    "comma-dangle": ["error", "only-multiline"],
+    "operator-linebreak": ["error", "after"],
+    "prefer-template": "off",
+
     // Allow requiring devDependencies for build and test
     "import/no-extraneous-dependencies": ["error", {
       "devDependencies": [
