--- a/package.json
+++ b/package.json
@@ -31,15 +31,10 @@
   "//": "All scripts should run in POSIX sh and Windows cmd.exe",
   "scripts": {
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -u",
-    "clean": "rimraf coverage && rimraf doc",
-    "doc": "npm run doc-js && npm run doc-spec",
-    "doc-js": "rimraf doc/api && jsdoc -c jsdoc.conf.json .",
-    "doc-spec": "rimraf doc/spec && mkdir doc/spec && mocha --reporter doc --recursive test | nodecat doc-src/spec/header.xhtml - doc-src/spec/footer.xhtml > doc/spec/index.xhtml",
-    "lint": "npm run lint-js && npm run lint-doc",
-    "lint-doc": "jsdoc -t templates/silent -c jsdoc-lint.conf.json . && echo JSDoc passed.",
+    "clean": "rimraf coverage",
+    "lint": "npm run lint-js",
     "lint-js": "eslint --report-unused-disable-directives . && echo ESLint passed.",
-    "postpublish": "git -C doc push && git push --follow-tags origin main gh-pages && echo Remember to update GitHub Releases from CHANGELOG.md",
-    "postversion": "rimraf doc && git clone -b gh-pages -l -q . doc && npm run doc && git -C doc add . && git -C doc commit -n -m \"Docs for v$npm_package_version\"",
+    "postpublish": "git push --follow-tags origin main && echo Remember to update GitHub Releases from CHANGELOG.md",
     "preversion": "npm run test-cov && nyc check-coverage --statements 95 && depcheck --ignore-dirs doc && david && git-branch-is main && hub-ci-status -vv --wait",
     "test": "npm run lint && npm run test-unit",
     "test-cov": "npm run lint && npm run test-unit-cov",
@@ -61,9 +56,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^28.0.0",
-    "jsdoc": "^3.6.0",
     "mocha": "^8.0.1",
-    "nodecat": "^2.0.0",
     "nyc": "^15.0.0",
     "rimraf": "^3.0.0"
   },
