Export assert-shim/strict
For drop-in replacement of assert/strict introduced in Node.js v15.0.0.

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "main": "index.js",
   "exports": {
-    ".": "./index.js"
+    ".": "./index.js",
+    "./strict": "./strict.js"
   },
   "//": "All scripts should run in POSIX sh and Windows cmd.exe",
   "scripts": {
